--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "flow-bin": "^0.53.1",
+    "node-sass": "^4.5.3",
     "notification-catcher": "^1.0.3",
     "notifme-sdk": "^1.0.1",
     "nunjucks": "^3.0.1",
